# Mandarin-Pinyin-Converter

./: .gitignore  CMakeLists.txt  README.md
installer/: build.ps1  setup.nsi
src/: dictionary.cpp  dictionary.hpp  http_server.cpp  http_server.hpp  main.cpp  pdf_extractor.cpp  pdf_extractor.hpp  renderer.cpp  renderer.hpp  segmenter.cpp  segmenter.hpp  tts.cpp  tts.hpp
